# ivado

./: .gitignore  DEVELOPMENT.md  README.md  data_acquisition.py  docker-compose.yml  features.csv  implementation_plan.md  ivado_context.md  justfile  pyproject.toml
docker/: notebook.Dockerfile  web.Dockerfile
notebooks/: museum_regression.ipynb
src/: __init__.py  api.py  cli.py  database.py  etl.py  model.py
tests/: README.md  __init__.py  conftest.py  test_api.py
