[project]
name = "ivado"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "notebook>=7.4.5",
    "requests>=2.32.5",
    "wikipedia-api>=0.8.1",
    "beautifulsoup4>=4.12.3",
    "scikit-learn>=1.5.2",
    "numpy>=1.26.0",
    "pandas>=2.3.2",
    "matplotlib>=3.10.6",
    "fastapi>=0.115.3",
    "uvicorn>=0.32.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pdbpp>=0.11.7",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]
